--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,15 @@
 @import url('./blocks/preview/preview.css');
 @import url('./blocks/preview/__image/preview__image.css');
 @import url('./blocks/preview/__caption/preview__caption.css');
+
+/* auth */
+@import url('blocks/auth/auth.css');
+@import url('./blocks/page/__login/page__login.css');
+@import url('blocks/auth/__title/auth__title.css');
+@import url('blocks/auth/__form/auth__form.css');
+@import url('blocks/auth/__form-fieldset/auth__form-fieldset.css');
+@import url('blocks/auth/__input/auth__input.css');
+@import url('blocks/auth/__input-error/auth__input-error.css');
+@import url('blocks/auth/__submit-button/auth__submit-button.css');
+@import url('./blocks/auth/__signin/auth__signin.css');
+@import url('./blocks/auth/__login-link/auth__login-link.css');
