--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,10 @@
 @import url('./blocks/popup/_opened/popup_opened.css');
 @import url('./blocks/popup/__container/popup__container.css');
 @import url('./blocks/popup/__container/_preview/popup__container_preview.css');
+@import url('./blocks/popup/__container/_tooltip/popup__container_tooltip.css');
 @import url('./blocks/popup/__close-button/popup__close-button.css');
 @import url('./blocks/popup/__title/popup__title.css');
+@import url('./blocks/popup/__caption/popup__caption.css');
 @import url('./blocks/popup/__form/popup__form.css');
 @import url('./blocks/popup/__form-fieldset/popup__form-fieldset.css');
 @import url('./blocks/popup/__input/popup__input.css');
@@ -63,6 +65,7 @@
 @import url('./blocks/popup/__input-error/_active/popup__input-error_active.css');
 @import url('./blocks/popup/__save-button/popup__save-button.css');
 @import url('./blocks/popup/__save-button/_invalid/popup__save-button_invalid.css');
+@import url('./blocks/popup/__tooltip-img/popup__tooltip-img.css');
 
 /* preview */
 @import url('./blocks/preview/preview.css');
