feat: добавить кнпоку Войти/Регистрация в Header
В основном прокачивал Header:
* Добавил кнопку перехода с окна логина на окно регистрации и обратно с окна регистрации. Вёрстка исправна, роуты исправно работают (хотел выпендриться через useLocation, но что-то пошло не так). А если пользователь залогиненый, кнопка меняется на "Выйти" и (внезапно) при нажатии разлогинивает.
* Добавил отображение почты залогиненого пользователя рядом с кнопкой "Выйти". Проверю работоспособность позже, когда допишу регистрацию.

Также причесал код в App.js, а то безобразие какое-то.

--- a/src/blocks/auth/__submit-button/auth__submit-button.css
+++ b/src/blocks/auth/__submit-button/auth__submit-button.css
@@ -2,4 +2,12 @@
   padding: 14px 0;
   font-size: 18px;
   line-height: 1.22;
+  background-color: #fff;
+  border: none;
+  transition: opacity .3s;
+  cursor: pointer;
+}
+
+.auth__submit-button:hover:enabled {
+  opacity: .8;
 }
