--- a/src/blocks/logo/logo.css
+++ b/src/blocks/logo/logo.css
@@ -1,6 +1,7 @@
 .logo {
   display: block;
   max-width: 142px;
+  width: 100%;
   height: 33px;
   transition: all .3s;
   background: transparent url('/src/images/logo.svg') center center/contain no-repeat;
