--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 @import url('./blocks/page/__header/page__header.css');
 @import url('./blocks/logo/logo.css');
 @import url('./blocks/header/__logo/header__logo.css');
+@import url('./blocks/header/__box/header__box.css');
+@import url('./blocks/header/__link/header__link.css');
 
 /* profile */
 @import url('./blocks/profile/profile.css');
