--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
 @import url('./blocks/header/__logo/header__logo.css');
 @import url('./blocks/header/__box/header__box.css');
 @import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__link/_signout/header__link_signout.css');
+@import url('./blocks/header/__email/header__email.css');
 
 /* profile */
 @import url('./blocks/profile/profile.css');
