--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,6 +1,7 @@
 .header__link {
+  display: block;
   font-size: 18px;
-  line-height: 1.82;
+  line-height: 1;
   color: #fff;
   text-decoration: none;
   transition: all .3s;
