feat: добавить адаптивность экранам аутентификации
На маленьких разрешениях инпуты и кнопки экранов входа и регистрации
больше не вызывают горизонтальный скролл.

--- a/src/blocks/auth/__submit-button/auth__submit-button.css
+++ b/src/blocks/auth/__submit-button/auth__submit-button.css
@@ -11,3 +11,9 @@
 .auth__submit-button:hover:enabled {
   opacity: .8;
 }
+
+@media screen and (max-width: 550px) {
+  .auth__submit-button {
+    font-size: clamp(14px,2em, 18px);
+  }
+}
