--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -10,3 +10,9 @@
 .header__link:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 550px) {
+  .header__link {
+    font-size: clamp(14px, 15px, 18px);
+  }
+}
